6.27 完成导出工具方法以及案例测试
